# tecnun_assistance_bots

./: .gitignore  CMakeLists.txt  README.md  score.sh
src/: BotWorker.cpp  BotWorker.h  Broker.cpp  Broker.h  CalendarBot.cpp  CalendarBot.h  ClassificationBot.cpp  ClassificationBot.h  Date.cpp  Date.h  IBot.h  Note.h  main_basic.cpp  main_pubsub.cpp  utils.cpp  utils.h
